# deptree-utils

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  flake.nix  justfile  test.html
crates/deptree-cli/: Cargo.toml  build.rs
crates/deptree-cli/src/: cytoscape.rs  lib.rs  main.rs  python.rs  python.rs.bak
crates/deptree-cli/templates/: cytoscape.html
crates/deptree-cli/tests/: python_test.rs
crates/deptree-cli/tests/fixtures/nested_imports_project/: another_module.py  class_imports.py  conditional_imports.py  function_imports.py
crates/deptree-cli/tests/fixtures/project_with_scripts/: pyproject.toml
crates/deptree-cli/tests/snapshots/: python_test__class_method_imports.snap  python_test__conditional_imports.snap  python_test__cytoscape_filtered_downstream.snap  python_test__cytoscape_highlighted_mode.snap  python_test__cytoscape_json_escaping.snap  python_test__cytoscape_no_orphans.snap  python_test__cytoscape_with_namespace_packages.snap  python_test__cytoscape_with_orphans.snap  python_test__cytoscape_with_scripts.snap  python_test__cytoscape_without_namespace_packages.snap  python_test__downstream_graph_dot_format.snap  python_test__downstream_highlighted_dot.snap  python_test__downstream_highlighted_mermaid.snap  python_test__downstream_max_rank_with_mermaid_format.snap  python_test__downstream_multiple_roots_max_rank.snap  python_test__downstream_nonexistent_module.snap  python_test__downstream_with_namespace_packages.snap  python_test__function_level_imports.snap  python_test__highlighted_orphans_included.snap  python_test__highlighted_with_scripts.snap  python_test__module_path_from_file_path.snap  python_test__namespace_grouping_cytoscape_graph_data.snap  python_test__namespace_grouping_dot_output.snap  python_test__namespace_grouping_mermaid_downstream_filtered.snap  python_test__namespace_grouping_mermaid_highlighted_mode.snap  python_test__namespace_grouping_mermaid_output.snap  python_test__namespace_grouping_mermaid_upstream_filtered.snap  python_test__namespace_highlighted_mode.snap  python_test__namespace_package_edge_traversal_dot.snap  python_test__namespace_package_excluded_by_default_mermaid.snap  python_test__namespace_package_included_with_flag_mermaid.snap  python_test__namespace_package_max_rank_distance.snap  python_test__namespace_package_max_rank_filtering.snap  python_test__namespace_package_with_orphans.snap  python_test__namespace_with_orphans_and_highlighting.snap  python_test__project_with_scripts.snap  python_test__project_with_scripts_mermaid.snap  python_test__sample_python_project_cytoscape_output.snap  python_test__sample_python_project_dot_output.snap  python_test__sample_python_project_mermaid_output.snap  (+13 more)
crates/deptree-graph/: Cargo.toml
crates/deptree-graph/src/: dependency_graph.rs  filters.rs  lib.rs
crates/deptree-wasm/: Cargo.toml
crates/deptree-wasm/src/: filters.rs  graph.rs  lib.rs
src/: main.rs  (+1 more)
(+113 files in other folders)
