[package]
name = "deptree-utils"
authors = ["Simon Zeng <rust@simonzeng.ca>"]
version = "0.1.0"
edition = "2024"
description = "A simple Rust project using Nix"

[dependencies]
clap = { version = "4.3.14", features = ["derive"] }
ruff_python_parser = { git = "https://github.com/astral-sh/ruff", tag = "0.13.3" }
ruff_python_ast = { git = "https://github.com/astral-sh/ruff", tag = "0.13.3" }
petgraph = "0.6"
walkdir = "2.5"
thiserror = "2.0"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
deptree-graph = { path = "../deptree-graph" }

[dev-dependencies]
insta = "1.40"
