[package]
name = "deptree-wasm"
version = "0.1.0"
edition = "2024"
authors = ["Simon Zeng <rust@simonzeng.ca>"]
description = "WebAssembly module for deptree-utils graph algorithms"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
petgraph = "0.6"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
